--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,7 +18,7 @@ $border: 2px solid $white;
 }
 
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -237,6 +237,7 @@ section {
           a {
             color: $black;
             font-weight: bold;
+            display: block;
             &:hover {
               color: $darkWhite;
             }
@@ -647,7 +648,9 @@ footer {
             opacity: 0.6;
           }
         }
-        .btn-eye {
+        .btn-eye,
+        .btn-eye-signup,
+        .btn-eye-conf {
           cursor: pointer;
           &:hover i {
             color: $white;
